# rag-practice

./: BuildRagAgentInLangchain.ipynb  gtm_agents.py  pyproject.toml
